# esp32-mock

./: .gitignore  .runsettings  CMakeLists.txt  CodeCoverage.runsettings  README.md  esp32-mock.sln  esp32-mock.sln.DotSettings  vcpkg-configuration.json  vcpkg.json
esp32-mock/: Adafruit_SSD1306.h  CMakeList.txt  CMakeLists.txt  Client.h  EEPROM.cpp  EEPROM.h  ESP.cpp  ESP.h  ESP8266HTTPClient.h  ESP8266WiFi.cpp  ESP8266WiFi.h  ESP8266httpUpdate.cpp  ESP8266httpUpdate.h  FS.cpp  FS.h  HTTPClient.cpp  HTTPClient.h  HTTPUpdate.cpp  HTTPUpdate.h  IPAddress.cpp  IPAddress.h  LittleFS.cpp  LittleFS.h  Preferences.cpp  Preferences.h  PubSubClient.cpp  PubSubClient.h  StringArduino.h  WiFi.cpp  WiFi.h  WiFiClient.h  WiFiClientSecure.cpp  WiFiClientSecure.h  WiFiClientSecureCommon.cpp  WiFiClientSecureCommon.h  WiFiCommon.cpp  WiFiCommon.h  Wire.cpp  Wire.h  esp32-mock.vcxproj  (+1 more)
esp32-mock-test/: Adafruit_SSD1306Test.cpp  CMakeLists.txt  EEPROMTest.cpp  ESP8266httpUpdateTest.cpp  ESPTest.cpp  FSTest.cpp  HTTPUpdateTest.cpp  HttpClientTest.cpp  IPAddressTest.cpp  PreferencesTest.cpp  PubSubClientTest.cpp  StringArduinoTest.cpp  WiFi8266Test.cpp  WiFiClientSecureTest.cpp  WiFiTest.cpp  WireTest.cpp  esp32-mock-test.vcxproj  freeRTOSTest.cpp  preferences.txt  ringbufTest.cpp
esp32-mock/freertos/: CMakeLists.txt  freeRTOS.cpp  freeRTOS.h  ringbuf.cpp  ringbuf.h  semphr.h
esp32-mock/sys/: CMakeLists.txt  time.cpp  time.h
